# GpLSI

./: README.md  config.txt  environment.yaml  get_config.py  postprocess_crc.py  pyproject.toml  run_cook.py  run_cook_chooseK.py  run_crc.py  run_crc_chooseK.py  run_crc_choose_ntopics.py  run_sim.py  run_spleen.py  run_spleen_all.py  simulation_helpers.py
GpLSI/: generate_topic_model.py  gplsi.py  graphSVD.py  utils.py
codes/: config.txt  example_synthetic_experiment.ipynb  get_config.py  postprocess_crc.py  run_cook.py  run_cook_choose_ntopics.py  run_crc.py  run_crc_choose_ntopics.py  run_sim.py  run_spleen.py  simulation_helpers.py
codes/sim_models/: W_hats.pkl  simul_N=100_n=1000_K=3_p=30_trial=0.pkl
data/stanford-crc/: .Rhistory  charville_labels.csv
output/sim/: sim_results_task=0.pkl
output/stanford-crc/: crc_chooseK_results.csv  crc_chooseK_results_2.csv  crc_chooseK_results_4.csv  crc_chooseK_results_5.csv  survival_gplsi.csv  survival_lda.csv
output/whats-cooking/: anchor_words_gplsi_7.csv  anchor_words_lda_7.csv  anchor_words_plsi_7.csv  cook_chooseK_results.csv  cooking_model_results_5.pkl  top_words_gplsi_7.csv  top_words_lda_7.csv  top_words_plsi_7.csv
plot/: mouse-spleen.ipynb  whats-cooking.ipynb
scripts/: setup_pycvxcluster.py
src/gplsi/: __init__.py  gplsi.py  graphSVD.py  realdata_cook.py  realdata_crc.py  realdata_spleen.py  simulation.py  utils.py
src/gplsi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
utils/: alto.R  data_helpers.py  plot.R  plot_sim.R  plot_sim_final.R  roc.R
utils/spatial_lda/: model.py
(+1199 files in other folders)
